--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,2 +1,9 @@
 Config:
-    port: 8888
+    listenPort: 8888
+    beanstalk:
+        port: 11300
+        host: "localhost"
+        tube: "wheredial"
+    mapme_at:
+        port: 3000
+        host: "localhost"
