--- a/config/production.yaml
+++ b/config/production.yaml
@@ -1,4 +1,10 @@
 Config:
-    port: 80
-    host: 178.63.23.95
-#live.mapme.at
+    listenPort: 80
+    listenHost: 178.63.23.95
+    beanstalk:
+        port: 11300
+        host: "localhost"
+        tube: "wheredial"
+    mapme_at:
+        port: 80
+        host: "mapme.at"
