Fixing syntax error in package.json, again

--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
 
   "private": true,
   "main": "yahms.js",
-  "scripts": { "start": "node yahms.js" } }
+  "scripts": { "start": "node yahms.js" }
 }
